--- a/cms-web Maven Webapp/src/main/webapp/static/css/index.css
+++ b/cms-web Maven Webapp/src/main/webapp/static/css/index.css
@@ -26,11 +26,16 @@ a:HOVER{
 	margin: 0;
 	background-color:rgb(34,34,34);
 	height: 100px;
+	transition-delay: 0s;
+	transition-property: all;
+	transition-duration: 0.5s;
+	transition-timing-function:ease;
 }
 .containerFluid
 {
 	width: 80%;
 	margin: 0 auto;
+	position: relative;
 	/*height: 100px;*/
 }
 
@@ -100,6 +105,7 @@ a:HOVER{
 	transition-delay: 0s;
 
 }
+
 .cha::before,.cha::after{
 	content: "";
 	position: absolute;  /*方便进行定位*/
@@ -111,21 +117,56 @@ a:HOVER{
 	background: white;
 }
 .cha::before{
-	transform: rotate(45deg);  /*进行旋转*/
+	transform:rotate(45deg);  /*进行旋转*/
 }
 .cha::after{
-	transform: rotate(-45deg);
+	transform:rotate(-45deg);
 }
 
 .cha:hover
 {
 	transform:rotate(90deg);
 }
+
+
+#registerInfor
+{
+	position: absolute;
+	right: 10px;
+	bottom: 0;
+	display: none;
+}
+#registerInfor>span
+{
+	color: white;
+}
+/*.cha1*/
+/*{*/
+	/*width: 15px;*/
+	/*height: 15px;*/
+	/*position: relative;*/
+	/*bottom: 0;*/
+	/*top:2px;*/
+	/*left: 0;*/
+	/*transform-origin: 50% 50%;*/
+
+
+/*}*/
+/*.cha1::before,.cha1::after*/
+/*{*/
+	/*height: 15px;*/
+	/*position: absolute;*/
+	/*left: 6px;*/
+	/*background: white;*/
+
+/*}*/
 .title {
 	padding: 4% 0 4% 0;
 	text-align: center;
 	margin-bottom: 5%;
 }
+
+
 
 .submit {
 	padding: 4% 0 4% 0;
@@ -144,6 +185,7 @@ a:HOVER{
 #loginSpot
 {
 	position: absolute;
+	z-index: 1;
 	height: 0px;
 	top:0px;
 	right: 0;
@@ -151,7 +193,7 @@ a:HOVER{
 	border: none;
 	transition-delay:0s;
 	transition-property: all;
-	transition-timing-function: ease;
+	transition-timing-function:ease;
 	transition-duration: 0.5s;
 	overflow: hidden;
 	background-color: rgba(35, 35, 35,0);
@@ -162,13 +204,25 @@ a:HOVER{
 	width: 70%;
 	margin: 0 auto;
 }
+.input-group:nth-child(3)
+{
+	margin-top: 7px;
+}
 
 .button0
 {
 	padding:20px 0 50px 0;
 }
 
-
+#alertMsg ,#alertMsg1
+{
+	padding: 0;
+	padding-left: 66px;
+	color:red;
+	line-height: 18px;
+	width: 70%;
+	margin: 0 auto;
+}
 #loginBtnTea
 {
 	float:right;
@@ -183,6 +237,8 @@ a:HOVER{
 	width: 40%;
 	border: none;
 }
+
+
 
 
 
